# information-arbitrage

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  setup.md
scripts/: backtest_signals.py  run_all.py  run_collector.py  run_trader.py
src/information_arbitrage/: __init__.py  app.py  config.py  env.py  models.py
src/information_arbitrage/backtest/: __init__.py  replay.py
src/information_arbitrage/collectors/: __init__.py  base.py  google_trends.py  ib_news.py  polymarket.py  rss.py
src/information_arbitrage/execution/: __init__.py  base.py  ib.py  mt5.py  router.py
src/information_arbitrage/instruments/: __init__.py  registry.py
src/information_arbitrage/monitor/: __init__.py  storage.py  telegram.py
src/information_arbitrage/scoring/: __init__.py  engine.py
src/information_arbitrage/strategy/: __init__.py  engine.py  market_state.py  sizing.py
tests/: test_dj_native_strategy.py  test_integration_pipeline.py  test_registry.py  test_scoring.py  test_sizing.py
